--- a/index.html
+++ b/index.html
@@ -1,121 +1,55 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <meta name="theme-color" content="#2b2b2b" />
-  <meta name="description" content="A simple Weather PWA with search, dark mode and offline support." />
-  <title>Weather</title>
-
-  <link rel="manifest" href="manifest.json" />
-  <link rel="icon" href="icon-192.png" />
-  <link rel="apple-touch-icon" href="icon-192.png" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Skyfall Weather</title>
+<link rel="manifest" href="manifest.json">
+<link rel="stylesheet" href="styles.css">
+<link rel="icon" href="icons/icon-192.png">
 </head>
 <body>
-  <main class="shell">
+<div class="app">
+  <aside class="sidebar">
+    <h2>Skyfall</h2>
+    <nav>
+      <div class="nav-item active">Weer</div>
+      <div class="nav-item">Statistiek</div>
+      <div class="nav-item">Instellingen</div>
+    </nav>
+  </aside>
+
+  <main class="content">
     <header class="topbar">
-      <label class="toggle">
-        <input id="darkToggle" type="checkbox" />
-        <span class="toggle-ui" aria-hidden="true"></span>
-        <span class="toggle-label">Donkere modus</span>
-      </label>
-
-      <div class="search">
-        <span class="search-ico" aria-hidden="true">🔎</span>
-        <input id="cityInput" type="search" placeholder="Zoek naar een stad..." autocomplete="off" />
-        <div id="suggestions" class="suggestions" hidden></div>
-      </div>
-
-      <button id="btnLocate" class="btn btn-green" type="button">
-        <span class="btn-ico" aria-hidden="true">🎯</span>
-        <span>Huidige locatie</span>
-      </button>
+      <input id="cityInput" placeholder="Zoek stad...">
+      <button id="locBtn">📍 Huidige locatie</button>
     </header>
 
-    <section class="grid">
-      <article class="card card-big clock-card" aria-live="polite">
-        <div class="clock-city">
-          <h2 id="placeName">—</h2>
-        </div>
-        <div class="clock-time" id="timeNow">--:--</div>
-        <div class="clock-date" id="dateNow">—</div>
-      </article>
+    <section class="cards">
+      <div class="card big">
+        <h3 id="place">Amsterdam</h3>
+        <div class="temp" id="temp">--°C</div>
+        <div class="desc" id="desc">--</div>
+      </div>
 
-      <article class="card card-wide now-card" aria-live="polite">
-        <div class="now-left">
-          <div class="temp-row">
-            <div class="temp" id="tempNow">--°C</div>
-            <div class="feels">Gevoelstemperatuur: <span id="feelsNow">--°C</span></div>
-          </div>
+      <div class="card">
+        <h4>Wind</h4>
+        <div id="wind">-- km/h</div>
+      </div>
 
-          <div class="sun-row">
-            <div class="sun-item">
-              <div class="sun-ico">↑</div>
-              <div class="sun-meta">
-                <div class="sun-label">Sunrise</div>
-                <div class="sun-val" id="sunrise">--:--</div>
-              </div>
-            </div>
-            <div class="sun-item">
-              <div class="sun-ico">↓</div>
-              <div class="sun-meta">
-                <div class="sun-label">Sunset</div>
-                <div class="sun-val" id="sunset">--:--</div>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="card">
+        <h4>Luchtvochtigheid</h4>
+        <div id="humidity">--%</div>
+      </div>
 
-        <div class="now-mid">
-          <div id="wxIcon" class="wx-icon" aria-hidden="true"></div>
-          <div class="wx-text" id="wxText">—</div>
-        </div>
-
-        <div class="now-right">
-          <div class="metric">
-            <div class="metric-ico" aria-hidden="true">〰️</div>
-            <div class="metric-val" id="humidity">--%</div>
-            <div class="metric-lab">Luchtvochtigheid</div>
-          </div>
-          <div class="metric">
-            <div class="metric-ico" aria-hidden="true">💨</div>
-            <div class="metric-val" id="wind">-- km/h</div>
-            <div class="metric-lab">Windsnelheid</div>
-          </div>
-          <div class="metric">
-            <div class="metric-ico" aria-hidden="true">⏲️</div>
-            <div class="metric-val" id="pressure">---- hPa</div>
-            <div class="metric-lab">Luchtdruk</div>
-          </div>
-          <div class="metric">
-            <div class="metric-ico" aria-hidden="true">UV</div>
-            <div class="metric-val" id="uv">--</div>
-            <div class="metric-lab">UV</div>
-          </div>
-        </div>
-      </article>
-
-      <article class="card card-tall forecast5">
-        <h3>5-daagse verwachting:</h3>
-        <div id="daysList" class="days-list"></div>
-      </article>
-
-      <article class="card card-wide hourly">
-        <h3>Uurlijkse verwachting:</h3>
-        <div id="hourlyRow" class="hourly-row"></div>
-      </article>
+      <div class="card">
+        <h4>Luchtdruk</h4>
+        <div id="pressure">----</div>
+      </div>
     </section>
-
-    <footer class="foot">
-      <div id="status" class="status">Ready</div>
-      <div class="muted">Data: Open‑Meteo (no API key). Works offline for last viewed city.</div>
-    </footer>
   </main>
+</div>
 
-  <script src="app.js" defer></script>
+<script src="app.js"></script>
 </body>
 </html>
